# openapi/models/models.gen.go
@@ -1,6 +1,6 @@
 // Package models provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
 package models
 
 import (
@@ -141,14 +141,19 @@ type StatisticsV2 struct {
 type StatisticsV3 struct {
 	AchievementsCount *[]RankingEntry `json:"achievements_count,omitempty"`
 	BuyShbi           *[]RankingEntry `json:"buy_shbi,omitempty"`
+	CpmMax            *[]RankingEntry `json:"cpm_max,omitempty"`
+	GoldenPalballGet  *[]RankingEntry `json:"golden_palball_get,omitempty"`
 	JackStartmax      *[]RankingEntry `json:"jack_startmax,omitempty"`
 	JackTotalmax      *[]RankingEntry `json:"jack_totalmax,omitempty"`
+	JackTotalmaxV2    *[]RankingEntry `json:"jack_totalmax_v2,omitempty"`
+	JackspStartmax    *[]RankingEntry `json:"jacksp_startmax,omitempty"`
 	MaxChainOrange    *[]RankingEntry `json:"max_chain_orange,omitempty"`
 	MaxChainRainbow   *[]RankingEntry `json:"max_chain_rainbow,omitempty"`
 	SpUse             *[]RankingEntry `json:"sp_use,omitempty"`
 	TotalMedals       *int            `json:"total_medals,omitempty"`
 	UltCombomax       *[]RankingEntry `json:"ult_combomax,omitempty"`
 	UltTotalmax       *[]RankingEntry `json:"ult_totalmax,omitempty"`
+	UltTotalmaxV2     *[]RankingEntry `json:"ult_totalmax_v2,omitempty"`
 }
 
 // GetDataParams defines parameters for GetData.
